v2.4.0/_sources/agents/agents/hovering-auv-agent.rst.txt
.. _`hovering-auv-agent`:

===========
HoveringAUV
===========

.. image:: images/hovering-auv.png
   :scale: 40%


Description
===========
Our custom in-house hovering AUV.

See the :class:`~holoocean.agents.HoveringAUV`.


Control Schemes
===============

**AUV Thrusters (``0``)**
  An 8-length floating point vector used to specify the control on each thruster. They begin with 
  the front right vertical thrusters, then goes around counter-clockwise, then repeat the last four 
  with the sideways thrusters.

**PID Controller (``1``)**
   A 6-length floating point vector of desired position in the global frame and roll, pitch, and yaw. 
   A basic PID controller has been implementing to move the vehicle to that position and orientation 
   using the needed forces and torques.

**Custom Dynamics (``2``)**
   A 6-length floating point vector of linear and angular accelerations in the global frame. This 
   is to be used for implementing custom dynamics. Besides collisions, all other forces and torques 
   (including gravity, buoyancy, and damping) have been disabled in the simulator to allow for a 
   clean slate for custom dynamics.

Sockets
=======
All sockets are oriented in the agent's body frame (right-handed NWU, with the x-axis pointing forward, 
the y-axis pointing to the left, and the z-axis pointing upward) unless stated otherwise. See 
:ref:`sockets` for details. 

Socket Definitions
------------------

.. list-table::
   :widths: 20 20 40
   :header-rows: 1

   * - Socket Name
     - Location
     - Description
   * - ``COM``
     - (7, 0, 0)
     - Center of mass.
   * - ``SonarSocket``
     - (42, 22, -5)
     - Location of the sonar sensor.
   * - ``DVLSocket``
     - (-28, 0.5, -23.5)
     - Location of the DVL.
   * - ``IMUSocket``
     - (-9.7, 7, 6)
     - Location of the IMU. Rotated 180 on x-axis (x points forward, y points right, z points down).
   * - ``DepthSocket``
     - (-14, 2, -15)
     - Location of the depth sensor.
   * - ``CameraRightSocket``
     - (32, -11, 15.5)
     - Location of the right camera (when looking in the same direction that the AUV is facing).
   * - ``CameraLeftSocket``
     - (32, 11.5, 15.5)
     - Location of the left camera (when looking in the same direction that the AUV is facing).
   * - ``Origin``
     - (0, 0, 0)
     - True center of the robot.
   * - ``Viewport``
     - (-250, 0, 217)
     - where the robot is viewed from.

Socket Frames
-------------
.. image:: images/hovering-angled.png
   :scale: 50%

.. image:: images/hovering-top.png
   :scale: 50%

.. image:: images/hovering-right.png
   :scale: 50%

.. image:: images/hovering-front.png
   :scale: 50%


.. _hoveringauv-flashlights:

Flashlights
===========

The HoveringAUV comes with four built-in flashlights positioned around the vehicle to provide illumination in various directions.

.. image:: images/hovering_auv_flashlight.png
   :scale: 60%

* `flashlight1`: (31, -25, 14)
* `flashlight2`: (31, 25, 14)
* `flashlight3`: (31, -25, -15)
* `flashlight4`: (31, 25, -15)

Please refer to :ref:`flashlights<flashlight>` for information on available control commands.